@@ -2,6 +2,9 @@ Revision history for Perl extension Starch::Store::CHI.
 
 {{$NEXT}}
 
+ - Updated docs to recommend that CHI be configured to throw exceptions instead
+   of logging them.
+
 0.02 2015-07-21
 
  - Better Carp caller reporting.
